Fixing #3 :: Line breaks in source code are now reflected in the sentence output.

--- a/src/ui/App.scss
+++ b/src/ui/App.scss
@@ -17,6 +17,15 @@
   font-weight: bold;
 }
 
+.token-newline:before {
+  display: block;
+  content: "\A";
+}
+
+.token-newline:after {
+  content: "\2003";
+}
+
 .token-literal:before {
   content: open-quote;
 }
